--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   page_transition: ^2.2.1
   logging: ^1.3.0
   connectivity_plus: ^5.0.2
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
