--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   logging: ^1.3.0
   connectivity_plus: ^5.0.2
   fluttertoast: ^8.2.4
+  mailer: ^6.5.0
 
 dev_dependencies:
   flutter_test:
